# iMDA-OCR

./: .gitignore  Makefile  README.md  pyproject.toml  requeriments.txt  requirements.txt
AuRA-Engine/ocr/common/: OCR.py  test.py
AuRA-Engine/ocr/legacy/: base.json  cli.ocrInterface.py
deprecated_code/: logic.pl  main.py  rect.py  server.ocr.py
engine/: core.py  main.py  plott.py  st.py
engine/common/: FloatingRectangle.py  VideoCapture.py  __init__.py  geometrics.py
engine/configurations/: constants.py  debug_flag_control.py
engine/ocr/: TextRecognition.py  __init__.py  text_recognition.py
engine/ocr/common/: fetch_rois_data.py
engine/ocr/legacy/: display_info.py  main.py  test.py
logic/: basic_unit_information.pl
