[project]
name = "imda-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "icecream>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "requests>=2.32.3",
    "streamlit-webrtc>=0.47.9",
    "streamlit>=1.38.0",
    "tcl>=0.2",
    "tk>=0.1.0",
]
